<resources>
    <string name="app_name">pa3</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">New user? Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="logo_desc">Filmdr Logo</string>
</resources>